--- a/EOS/helmeos_without_rad/README
+++ b/EOS/helmeos_without_rad/README
@@ -1,6 +1,9 @@
-Differences between helmeos_without_rad and helmeos
+Differences between helmeos_without_rad and helmeos.  In helmeos.f90,
+ssol (i.e., sigma) is set to zero.  Thus radiation is taken out from
+EOS to avoid double counting.  
 
-In helmeos.f90, ssol (i.e., sigma) is set to zero.  Thus radiation is taken out. 
-
-In eos_stuff.f90, subroutine eos_get_cv is added.
-
+This is the general stellar equation of state developed by Frank
+Timmes (ASU).  This version was downloaded from his website and the
+interface was modified both for thread safety and to use a derived
+type construct for passing thermodynamic quantities.  
+We thank Frank for making this EOS available.
