updated Users Guide

--- a/UsersGuide/CastroRadUserGuide.tex
+++ b/UsersGuide/CastroRadUserGuide.tex
@@ -44,19 +44,18 @@ by typing
 and update it regularly by typing \verb|git pull| in the BoxLib
 directory. 
 
-\paragraph{CASTRO} You can download CASTRO via git by typing
+\paragraph{CASTRO} You can download CASTRO via git by typing the
+following command.
 \vspace{5pt}
 
-\verb|git clone XXX@battra.lbl.gov:/home/ccse_src/gitroot/Castro.git|\\[5pt]
-where {\tt XXX} should be replaced with your user name on battra.  You
-can update it regularly by typing \verb|git pull| in the Castro
-directory.
+\verb|git clone https://github.com/BoxLib-Codes/Castro|\\[5pt] You can
+update it regularly by typing \verb|git pull| in the Castro directory.
 
-\paragraph{CastroRadiation} You can download CastroRadiation via git by typing
+\paragraph{CastroRadiation} You can download CastroRadiation via git
+by typing the following command.
 \vspace{5pt}
 
-\verb|git clone XXX@battra.lbl.gov:/home/ccse_src/gitroot/CastroRadiation.git|\\[5pt]
-where {\tt XXX} should be replaced with your user name on battra.  
+\verb|git clone https://github.com/BoxLib-Codes/CastroRadiation|
 
 \paragraph{Hypre} CASTRO radiation solvers use Hypre
 (\url{https://computation.llnl.gov/casc/linear_solvers/sls_hypre.html})
