--- a/UsersGuide/CastroRadUserGuide.tex
+++ b/UsersGuide/CastroRadUserGuide.tex
@@ -154,13 +154,13 @@ Some notes:
 \item Castro allows for two temperatures (different radiation and gas
   temperature, so $E_\mathrm{r} \ne a T_\mathrm{gas}^4$.
   Correspondingly, Castro cares about both the Planck mean,
-  $\kappa_F$, and Rosseland mean, $\kappa_R$, opacities---these have
+  $\kappa_P$, and Rosseland mean, $\kappa_R$, opacities---these have
   different weightings.
   
-  If we set $\kappa_F \Delta x \gg 1$ ($\kappa_F$ is really large),
+  If we set $\kappa_P \Delta x \gg 1$ ($\kappa_P$ is really large),
   then the two temperatures become the same.
 
-  If we set $\kappa_F = \kappa_R$, then we can see how different the
+  If we set $\kappa_P = \kappa_R$, then we can see how different the
   two temperature are.
 
   In an optically thick medium, we would not expect the two temperatures
