--- a/UsersGuide/CastroRadUserGuide.tex
+++ b/UsersGuide/CastroRadUserGuide.tex
@@ -401,7 +401,7 @@ equation. They do not affect hydrodynamic boundaries.
   \item {\tt 105} {\em Sanchez-Pomraning}:
 
     This is a modified form of the Marshak boundary condition that works with FLD.
-    This is like the Marshak condition, but $\lambda = 1/3$ is assumed inside
+    This is like the Marshak condition, but $\lambda = 1/3$ is not assumed inside
     the boundary (optical thickness).
 
   \end{itemize}
