--- a/UsersGuide/CastroRadUserGuide.tex
+++ b/UsersGuide/CastroRadUserGuide.tex
@@ -131,6 +131,23 @@ EOS_dir := helmeos_without_rad
 should be set.  If you have your own EOS, you can put it in
 {\tt\seqsplit{CastroRadiation/EOS}}.
 
+\subsubsection{EOS Parameters}
+
+The following parameters affect how the radiation solver used the EOS:
+\begin{itemize}
+  \item {\tt radiation.do\_real\_eos = 1}
+
+    Usually you do not want to change this from the default.  Setting
+    this to {\tt 0} is only for contrived tests that assume the
+    specific heat is in the form of a power-law,
+    \begin{equation}
+      c_v = \mathrm{const}\ \rho^m T^{-n}
+    \end{equation}
+
+\end{itemize}
+  
+  
+
 \subsection{Network}
 
 Several netwroks are included in the source code.  If you have your
@@ -165,9 +182,9 @@ Some notes:
   texts may instead have an implicit density factor in $\kappa$,
   yielding units $\mathrm{cm}^2~\mathrm{g}^{-1}$.
 
-\item Castro allows for two temperatures (different radiation and gas
-  temperature, so $E_\mathrm{r} \ne a T_\mathrm{gas}^4$.
-  Correspondingly, Castro cares about both the Planck mean,
+\item \castro\ allows for two temperatures (different radiation and gas
+  temperature, so $E_\mathrm{r} \ne a T_\mathrm{gas}^4$).
+  Correspondingly,  \castro\ cares about both the Planck mean,
   $\kappa_P$, and Rosseland mean, $\kappa_R$, opacities---these have
   different weightings.
 
@@ -197,7 +214,7 @@ The parameters describing the opacity include:
   compute opacities.  If this is set to 1, the following parameters
   for opacities will be ignored.
 
-\item For the Plank mean opacity of the form in Eq.~(\ref{eq:kappa}),
+\item For the Planck mean opacity of the form in Eq.~(\ref{eq:kappa}),
   the following parameters set the coefficient and exponents:
   \begin{itemize}
   \item {\tt radiation.const\_kappa\_p = -1.0}
@@ -250,22 +267,22 @@ the total opacity is the sum of {\tt kappa\_p} and {\tt scattering}.
 \section{Radiation Solver Physics}
 
 In this section, we list some radiation related parameters that you
-can set in an ``inputs'' file.  Here are some important parameters:
-\begin{description}
+can set in an {\tt inputs} file.  Here are some important parameters:
+\begin{itemize}
 \item {\tt radiation.SolverType}:
 
-  Set it to 5 for the gray solver, and 6 for the MG solver.
+  Set it to {\tt 5} for the gray solver, and {\tt 6} for the MG solver.
 
 \item {\tt castro.do\_hydro}
 
-  Usually you want to set it to 1.  If it is set to 0, hydro will be
-  turned off, and the calculation will only solve radiation diffusion
-  equation.
+  Usually you want to set it to {\tt 1}.  If it is set to {\tt 0},
+  hydro will be turned off, and the calculation will only solve
+  radiation diffusion equation.
 
 \item {\tt castro.do\_radiation}
 
-  If it is 0, the calculation will be pure hydro.
-\end{description}
+  If it is {\tt 0}, the calculation will be pure hydro.
+\end{itemize}
 
 Below are more parameters.  For each parameter, the default value is
 on the right-hand side of the equal sign.
@@ -274,16 +291,23 @@ on the right-hand side of the equal sign.
 \subsection{Verbosity and I/O}
 \label{sec:bothpar}
 
-\begin{description}
-\item[radiation.v = 0] \hfill \\
+\begin{itemize}
+\item {\tt radiation.v = 0}
+  
   Verbosity
-\item[radiation.verbose = 0] \hfill \\
+
+\item {\tt radiation.verbose = 0}
+  
   Verbosity
-\item[radiation.Test\_Type\_lambda = 0] \hfill \\
-  The gray solver only.  If 1, save flux limiter.
-\item[radiation.Test\_Type\_Flux = 0] \hfill \\
-  If 1, save the total radiation flux.
-\end{description}
+
+\item {\tt radiation.Test\_Type\_lambda = 0}
+  
+  The gray solver only.  If {\tt 1}, save flux limiter.
+
+\item {\tt radiation.Test\_Type\_Flux = 0}
+  
+  If {\tt 1}, save the total radiation flux.
+\end{itemize}
 
 
 \subsection{Flux Limiter and Closure}
@@ -366,7 +390,7 @@ equation. They do not affect hydrodynamic boundaries.
     Specify the radiation energy density on the boundary.
     For gray radiation, this could be $E_r = a T^4$.
 
-    For multigroup radiation, Castro stores the energy density as
+    For multigroup radiation,  \castro\ stores the energy density as
     $\mathrm{erg}~\mathrm{cm}^{-3}$, so the total radiation energy
     can be found by simply summing over the groups.  So if you want
     to set the radiation BCs using the Planck function, you simply
@@ -376,7 +400,7 @@ equation. They do not affect hydrodynamic boundaries.
   \item {\tt 102} {\em Neumann}:
 
     Here, you specify the radiation flux on the boundary.  For gray
-    radiation, this is the expression given in the gray Castro paper
+    radiation, this is the expression given in the gray \castro\ paper
     (Eq. 7, 8),
     \begin{equation}
       F_r = - \frac{c\lambda}{\kappa_R} \nabla E_r
