add a note about the plotfile variable and its units

--- a/UsersGuide/CastroRadUserGuide.tex
+++ b/UsersGuide/CastroRadUserGuide.tex
@@ -618,4 +618,14 @@ is best for your problem and computer.
   Verbosity for {\tt level\_solver\_flag} $>=$ 100
 \end{description}
 
+
+\section{Output}
+
+\subsection{Gray Solver}
+
+For the gray radiation solver, the radiation energy density is stored in plotfiles
+as {\tt rad}.  Note that this quantity has units of $\mathrm{erg~cm^{-3}}$, which
+is different that the specify internal energy of the gas $\mathrm{erg~g^{-1}}$.
+
+
 \end{document}
